Create divs for buttons

--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel = "stylesheet" href="style.css">
 </head>
 <body>
+    <div class = "wrapper">
+        <div class="calculator">
+            <div class="display"></div>
+            <div class="numbers"></div>
+            <div class="numbers2">
+                <div class="numAndEqual">
+                    <div class="nums">
+                        <div></div><!-- 123 -->
+                        <div></div><!-- 0. -->
+                    </div>
+                    <div class="equal">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 <script src="script.js"></script>
