--- a/index.html
+++ b/index.html
@@ -11,16 +11,28 @@
     <div class = "wrapper">
         <div class="calculator">
             <div class="display"></div>
-            <div class="numbers"></div>
-            <div class="numbers2">
-                <div class="numAndEqual">
-                    <div class="nums">
-                        <div></div><!-- 123 -->
-                        <div></div><!-- 0. -->
-                    </div>
-                    <div class="equal">
-
-                    </div>
+            <div class="buttons">
+                 <div class="numbers">
+                    <button>AC</button>
+                    <button>C</button>
+                    <button>/</button>
+                    <button>7</button>
+                    <button>8</button>
+                    <button>9</button>
+                    <button>4</button>
+                    <button>5</button>
+                    <button>6</button>
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                    <button>0</button>
+                    <button>.</button>
+                </div>
+                <div class="operators">
+                    <button>x</button> 
+                    <button>-</button>
+                    <button>+</button>
+                    <button>=</button>       
                 </div>
             </div>
         </div>
