--- a/index.html
+++ b/index.html
@@ -10,30 +10,29 @@
 <body>
     <div class = "wrapper">
         <div class="calculator">
-            <div class="display"></div>
+            <div class="displayRes">
+                <div class="lastValue"></div>
+                <div class="display"></div>
+            </div>
             <div class="buttons">
-                 <div class="numbers">
-                    <button>AC</button>
-                    <button>C</button>
-                    <button>/</button>
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
-                    <button>0</button>
-                    <button>.</button>
-                </div>
-                <div class="operators">
-                    <button>x</button> 
-                    <button>-</button>
-                    <button>+</button>
-                    <button>=</button>       
-                </div>
+                    <button class="clear span2">AC</button>
+                    <button class="delete">C</button>
+                    <button class="operator">/</button>
+                    <button class="number">7</button>
+                    <button class="number">8</button>
+                    <button class="number">9</button>
+                    <button class="operator">x</button> 
+                    <button class="number">4</button>
+                    <button class="number">5</button>
+                    <button class="number">6</button>
+                    <button class="operator">-</button>
+                    <button class="number">1</button>
+                    <button class="number">2</button>
+                    <button class="number">3</button>
+                    <button class="operator">+</button>
+                    <button class="number">.</button>
+                    <button class="number">0</button>
+                    <button class="span2 equal">=</button>      
             </div>
         </div>
     </div>
