Fix button holding after press enter

--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
                 <div class="display"></div>
             </div>
             <div class="buttons">
-                    <button class="clear span2">AC</button>
-                    <button class="delete">C</button>
-                    <button class="operator">/</button>
-                    <button class="number">7</button>
-                    <button class="number">8</button>
-                    <button class="number">9</button>
-                    <button class="operator">x</button> 
-                    <button class="number">4</button>
-                    <button class="number">5</button>
-                    <button class="number">6</button>
-                    <button class="operator">-</button>
-                    <button class="number">1</button>
-                    <button class="number">2</button>
-                    <button class="number">3</button>
-                    <button class="operator">+</button>
-                    <button class="number">.</button>
-                    <button class="number">0</button>
-                    <button class="span2 equal">=</button>      
+                    <button class="clear span2" onclick="this.blur();">AC</button>
+                    <button class="delete" onclick="this.blur();">C</button>
+                    <button class="operator" onclick="this.blur();">/</button>
+                    <button class="number" onclick="this.blur();">7</button>
+                    <button class="number" onclick="this.blur();">8</button>
+                    <button class="number" onclick="this.blur();">9</button>
+                    <button class="operator" onclick="this.blur();">x</button> 
+                    <button class="number" onclick="this.blur();">4</button>
+                    <button class="number" onclick="this.blur();">5</button>
+                    <button class="number" onclick="this.blur();">6</button>
+                    <button class="operator" onclick="this.blur();">-</button>
+                    <button class="number" onclick="this.blur();">1</button>
+                    <button class="number" onclick="this.blur();">2</button>
+                    <button class="number" onclick="this.blur();">3</button>
+                    <button class="operator" onclick="this.blur();">+</button>
+                    <button class="number" onclick="this.blur();">.</button>
+                    <button class="number" onclick="this.blur();">0</button>
+                    <button class="span2 equal" onclick="this.blur();">=</button>      
             </div>
         </div>
     </div>
