--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    
+     <div class="footer">André Roque © 2022</div>
 </body>
 <script src="script.js"></script>
 </html>
